using resource loader from support.aas -> #24